--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,13 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+img {
+  width: 40px;
+  height: 20px;
+  padding-right: 10px;
+}
+
+ul {
+  list-style-type: none;
+}
